<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>mujoco_ros2_control_demos</name>
 <version>0.1.0</version>
 <description>mujoco_ros2_control_demos</description>

 <maintainer email="sangteak601@gmail.com">Sangtaek Lee</maintainer>

 <license>MIT</license>

 <author>Sangtaek Lee</author>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>rclcpp</depend>
 <depend>rclcpp_action</depend>
 <depend>std_msgs</depend>
 <depend>control_msgs</depend>
 <depend>joint-trajectory-controller</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>